# ungula-thermal

./: .clang-format  .clang-tidy  .gitignore  API.md  LICENSE  README.md  library.properties
src/: ungula_thermal.h
src/thermal/: conversions.h  fan_control.cpp  fan_control.h  heater_control.cpp  heater_control.h  pid_controller.cpp  pid_controller.h  temp_sensor.cpp  temp_sensor.h
src/ungula/: thermal.h
src/ungula/thermal/: fan_control.cpp  fan_control.h  heater_control.cpp  heater_control.h  pid_controller.cpp  pid_controller.h  temp_sensor.cpp  temp_sensor.h
tests/: .gitignore  1_build.sh  2_run.sh  CMakeLists.txt  test_fan_control.cpp  test_heater_channel.cpp  test_pid_comprehensive.cpp  test_pid_controller.cpp  test_temp_sensor.cpp
tests/ArduinoStub/: Arduino.h
